--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Tjek at koden kan importeres (kompileres)
+      - name: Tjek at koden kan kompilere
         run: |
           python -m compileall .
 
@@ -32,7 +32,7 @@ jobs:
         run: |
           pytest
 
-build-and-push-image:
+  build-and-push-image:
     # Kør kun ved push til main (ikke ved pull_request)
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: test
